facter (1.5.6-2) UNRELEASED; urgency=low

  * Added depends possibility on libopenssl-ruby1.9

 -- Micah Anderson <micah@debian.org>  Tue, 30 Jun 2009 00:21:23 -0400

facter (1.5.6-1) unstable; urgency=low

  * New upsream release
  * Add myself to uploaders
  * Bumped Standards-Version (no changes)
  * Added versioned build-depends on debhelper 5

 -- Micah Anderson <micah@debian.org>  Mon, 29 Jun 2009 22:53:18 -0400

facter (1.5.4-1) unstable; urgency=low

  [ Nigel Kersten ]
  * New upstream release
  * Switch maintainer to pkg-puppet-devel list
  * Modify uploaders
  * Update watch file regexp to exclude release canditate tarballs
  * Use upstream install.rb script to build rather than copying manually

  [ Andrew Pollock ]
  * debian/control: add libopenssl-ruby to build dependencies
  * debian/control: bump Standards-Version (no changes)
  * debian/compat: increase to 5
  * debian/control: add pciutils and ${misc:Depends} to dependencies

 -- Andrew Pollock <apollock@debian.org>  Mon, 13 Apr 2009 15:20:21 -0700

facter (1.5.1-0.1) unstable; urgency=low

  * Non-maintainer upload
  * New upstream release to fix zombie problem (Closes: #497363)

 -- Micah Anderson <micah@debian.org>  Wed, 03 Sep 2008 09:06:56 -0400

facter (1.5-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * New upstream release (Closes: #492430)
  * Upgraded standards version to 3.8.0 (no changes)

 -- Micah Anderson <micah@debian.org>  Sat, 26 Jul 2008 07:46:56 -0400

facter (1.3.8-1) unstable; urgency=low

  * New upstream release.
  * Add 4.0/etch as a new entry in the debianversion fact.
  * Unfutz the debianversion fact so it doesn't annoy us with it's
    "constant already defined" whining.

 -- Matthew Palmer <mpalmer@debian.org>  Tue, 25 Sep 2007 07:58:22 +1000

facter (1.3.7-1) unstable; urgency=low

  * New upstream release.  Closes: #418967.
  * Add dependency on net-tools (for ifconfig).  Closes: #415899.