@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Puppet Package Maintainers <pkg-puppet-devel@lists.alioth.debian.org>
 Uploaders: Andrew Pollock <apollock@debian.org>, Nigel Kersten <nigelk@explanatorygap.net>, Micah Anderson <micah@debian.org>
-Build-Depends: debhelper (>= 5.0.0), ruby (>= 1.8), libopenssl-ruby
+Build-Depends: ruby-pkg-tools, cdbs, debhelper (>= 5.0.0), ruby (>= 1.8), libopenssl-ruby
 Standards-Version: 3.8.2
 
 Package: facter
