@@ -1,2 +1,0 @@
-usr/bin
-usr/lib/ruby/1.8
